<resources>
    <string name="app_name">FooApp11</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="food_name">Hamburger</string>
    <string name="food_description">A hamburger is a sandwich consisting of a cooked meat patty on a bun or roll.</string>
    <string name="currency">Rs.</string>
    <string name="amount">1200</string>
    <string name="quantity">Quantity</string>
    <string name="quantity_value">1</string>
    <string name="total">Total</string>
    <string name="total_value">3600</string>
    <string name="remove_btn">Remove</string>
    <string name="back_btn">Back</string>
    <string name="add_review">ADD REVIEW</string>
    <string name="slogan">We would love to be trusted by every food lover in the town.</string>
    <string name="name">Yummy</string>
    <string name="register">Register</string>
    <string name="login">Login</string>
    <string name="login_placeholder">Enter your phone</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="password_placeholder">Enter your password</string>
    <string name="new_user">Don\'t have an account?</string>
    <string name="user_name">Name</string>
    <string name="name_placeholder">Enter your name</string>
    <string name="current_user">Already have an account?</string>
    <string name="re_password">Confirm Password</string>
    <string name="re_password_placeholder">Enter your password again</string>
    <string name="ordered_foods">Ordered Foods</string>
    <string name="payment_details">PAYMENT DETAILS</string>
    <string name="address_details">ADDRESS DETAILS</string>
    <string name="review">Review</string>
    <string name="customer_login">CUSTOMER LOGIN</string>
    <string name="admin_login">ADMIN LOGIN</string>
    <string name="enter_review">Enter your Review</string>
    <string name="home">HOME</string>
    <string name="cart">CART</string>
    <string name="account">ACCOUNT</string>
    <string name="category_text">Category Text</string>


    <string name="add_product">ADD PRODUCT</string>
    <string name="edit_product">EDIT PRODUCT</string>
    <string name="delete_product">DELETE PRODUCT</string>
    <string name="notification_history">Notification History</string>
    <string name="settings">Settings</string>
    <string name="enable_notifications">Enable Notifications</string>
    <string name="notification_period">Notification Period</string>
    <string name="btn_update">UPDATE</string>
    <string name="email">Email</string>
    <string name="email_placeholder">Enter your email</string>
    <string name="PID">Product Id</string>
    <string name="Name">Product Name</string>
    <string name="PPrice">Product Price</string>
    <string name="PDes">Product Description</string>
    <string name="imgUrl_placeholder">Product Image URL</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="product_id">Product Id:</string>
    <string name="product_name">Name</string>
    <string name="price">Price</string>
    <string name="description">Description</string>
    <string name="BtnEdit">Edit</string>
    <string name="BtnDelete">Delete</string>


    <!--payment -->
    <string name="order_confirmation">Order Confirmation</string>
    <string name="count">0</string>
    <string name="decrease">-</string>
    <string name="increase">+</string>
    <string name="text_qunt">Quentity</string>
    <string name="purchase">next</string>
    <string name="total_item_cost">Total Item Cost</string>
    <string name="tic">tic</string>
    <string name="shiping_cost">Shipping Cost</string>
    <string name="sc">sc</string>
    <string name="total_cost">Total Cost</string>
    <string name="tc">tc</string>
    <string name="foodItem_img">foodimg</string>
    <string name="title_activity_card_deatails_form">CardDeatailsForm</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="shipping_address">Shipping Address</string>
    <string name="address">---</string>
    <string name="change">Change</string>
    <string name="payment_method">Payment Method</string>
    <string name="credit_debit">Credit/ Debit</string>
    <string name="paypal">PayPal</string>
    <string name="cardNumber">Card Number</string>
    <string name="cardHolderName">Card Holder Name</string>
    <string name="provide_card_deatials_Head">Provide Card Deatials</string>
    <string name="cvv">CVV</string>
    <string name="expierDAte">Expier Date</string>
    <string name="pay_btn">PAY</string>
    <string name="expierDateIn">12/03</string>
    <string name="CardNo">xxxx-xxxx-xxxx-xxxx</string>
    <string name="cvvHint">xxx</string>
    <string name="nameHint">Ex :- Jhone Whick</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="to_be_review">To be Review</string>
    <string name="paid">PAID</string>
    <string name="unpaid">unpaid</string>
    <string name="pCardName">item Name</string>
    <string name="pCardPrice">0.00</string>
    <string name="pCardQty">0</string>
    <string name="pCardNameHint">"Total Price : "</string>
    <string name="pCardQtyHint">Quantity</string>
    <string name="pCardPriceHint">Totl Price</string>
    <string name="deleteBtn">DELETE</string>
    <string name="PayBtn">Pay</string>
    <string name="draftPayment">Pay later</string>
    <string name="cardDetailsHead">Credit or Debit Card</string>
    <string name="add_payment">Add Payment</string>
    <string name="buy">Buy</string>
    <string name="paymentHistory">Payment History</string>
    <string name="priceHintOC">Price</string>


    <!--delivery -->
    <string name="hintHNo">Apt or House No</string>
    <string name="hintBuilding">Business or building name</string>
    <string name="hintStreet">Street number and name</string>
    <string name="hintArea">Area/District</string>
    <string name="hintLandmark">Landmark</string>
    <string name="textAddressDetails">Enter Your Address Details</string>
    <string name="BtnTextAddAddress">Save</string>
    <string name="BtnTextExitBtn">Exit</string>
    <string name="textSavedAddresses">Saved Addresses</string>
    <string name="BtnTextAddNewAddressBtn">ADD NEW ADDRESS</string>
    <string name="textDeleteConf">Are You Sure ?</string>
    <string name="BtnDeleteConfYes">Yes, Delete</string>
    <string name="BtnDeleteConfNo">No, Exit</string>
    <string name="BtnTextDelete">DELETE</string>
    <string name="BtnTextUpdate">UPDATE</string>
    <string name="BtnTextDeliveryLocations">Delivery Locations</string>



</resources>