<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:background="@color/darkBlue"
    android:padding="4sp"
    android:layout_margin="10sp"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/textHNo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hintHNo"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textBuilding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hintBuilding"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textStreet"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hintStreet"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textArea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hintArea"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/textLandmark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hintLandmark"
        android:textColor="@color/white"
        android:textSize="18sp"
        android:textStyle="italic" />

    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_margin="4sp"
        android:padding="4sp"
        android:layout_height="wrap_content">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonDelete"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:text="@string/BtnTextDelete"
            android:textColor="@color/white" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/buttonUpdate"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@color/green"
            android:text="@string/BtnTextUpdate"
            android:textColor="@color/white" />

    </LinearLayout>
</LinearLayout>