<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#4D9A93"
    tools:context=".ReviewFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:text="@string/hello_blank_fragment" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height= "wrap_content"
        android:layout_alignParentBottom= "true"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnFragment1"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight=".33"
            android:onClick="changeFragment"
            android:text="@string/home" />

        <Button
            android:id="@+id/btnFragment2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight=".33"
            android:onClick="changeFragment"
            android:text="@string/cart" />

        <Button
            android:id="@+id/btnFragment3"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight=".33"
            android:onClick="changeFragment"
            android:text="@string/account"
            />

    </LinearLayout>

</FrameLayout>