<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/hamburger"
    tools:context=".OrderConfirm">

    <LinearLayout
        android:id="@+id/back"
        android:layout_width="350dp"
        android:layout_height="567dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="17dp"
        android:layout_marginBottom="75dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.166">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:text="@string/order_confirmation"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="34sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="161dp"
            android:layout_margin="10sp"
            android:background="@color/darkBlue"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/foodImgOC"
                android:layout_width="wrap_content"
                android:layout_height="147dp"
                android:layout_weight="1"
                android:contentDescription="@string/foodItem_img"
                tools:ignore="ImageContrastCheck"
                tools:src="@tools:sample/avatars" />

            <LinearLayout
                android:layout_width="211dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/foodNameOC"
                    android:layout_width="match_parent"
                    android:layout_height="51dp"
                    android:background="@color/darkBlue"
                    android:gravity="center"
                    android:text="@string/food_name"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/foodDescriptionOC"
                    android:layout_width="match_parent"
                    android:layout_height="68dp"
                    android:background="@color/darkBlue"
                    android:gravity="center"
                    android:text="@string/food_description"
                    android:textColor="@color/white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/priceHintOC"
                        android:layout_width="15dp"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/darkBlue"
                        android:gravity="center"
                        android:text="@string/priceHintOC"
                        android:textColor="@color/white" />

                    <TextView
                        android:id="@+id/priceOC"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:background="@color/darkBlue"
                        android:gravity="center"
                        android:textColor="@color/white" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:layout_margin="10sp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="31dp"
                android:background="@color/darkBlue"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView16"
                    android:layout_width="81dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/total_item_cost"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tic"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/tic"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:background="@color/darkBlue"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView17"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/shiping_cost"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/sc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/sc"
                    android:textColor="@color/white" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:background="@color/darkBlue"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView20"
                    android:layout_width="77dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/total_cost"
                    android:textColor="@color/white" />

                <TextView
                    android:id="@+id/tc"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:text="@string/tc"
                    android:textColor="@color/white" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/nextBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/purchase"
            android:textColor="@color/white" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

