<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.fragment.app.FragmentContainerView
        android:id="@+id/fragmentDefault"
        android:name="com.example.fooapp11.HomeFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        />

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height= "wrap_content"
        android:layout_alignParentBottom= "true"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/btnFragment1"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight=".30"
            android:onClick="changeFragment"
            android:text="@string/home"
            android:textSize="22sp"
            />

        <Button
            android:id="@+id/btnFragment2"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight=".30"
            android:onClick="changeFragment"
            android:text="@string/cart"
            android:textSize="22sp"
            />

        <Button
            android:id="@+id/btnFragment3"
            android:layout_width="0dp"
            android:layout_height="100dp"
            android:layout_weight=".40"
            android:onClick="changeFragment"
            android:text="@string/account"
            android:textSize="22sp"
            />

    </LinearLayout>

</RelativeLayout>